feat: reorganize settings panel with section headers and improved styling

--- a/src/pages/zen.astro
+++ b/src/pages/zen.astro
@@ -34,7 +34,7 @@ import ErrorBoundary from '../components/ErrorBoundary';
 			>
 				Skip to main content
 			</a>
-			<div id="zen-app" class="relative w-full min-h-screen overflow-hidden">
+			<div id="zen-app" class="relative w-full min-h-screen overflow-hidden stats-cq-host">
 				<SiteHeader client:load mode="zen" />
 
 				<!-- Main canvas -->
