--- a/src/pages/quote.astro
+++ b/src/pages/quote.astro
@@ -32,7 +32,7 @@ const randomQuote = getRandomQuote(quotes);
 	<body>
 		<ClientTransitions client:load />
 		<ErrorBoundary>
-			<div id="quote-app" class="relative w-full min-h-screen">
+			<div id="quote-app" class="relative w-full min-h-screen stats-cq-host">
 				<SiteHeader client:load mode="quote" />
 
 				<!-- Main quote typer -->
