feat: add Nebula Sans font and improve font switching functionality

--- a/src/pages/quote.astro
+++ b/src/pages/quote.astro
@@ -21,7 +21,7 @@ const randomQuote = getRandomQuote(quotes);
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/webp" href="/Favicon.webp" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Quote Mode - Zen Typer</title>
