--- a/src/pages/zen.astro
+++ b/src/pages/zen.astro
@@ -16,7 +16,7 @@ import ErrorBoundary from '../components/ErrorBoundary';
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/webp" href="/Favicon.webp" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Zen Mode - Zen Typer</title>
