--- a/src/pages/quote.astro
+++ b/src/pages/quote.astro
@@ -27,7 +27,11 @@ const randomQuote = getRandomQuote(quotes);
 		<title>Quote Mode - Zen Typer</title>
 		<meta name="description" content="Type curated Zen quotes with precision tracking" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=JetBrains+Mono:wght@400;500;600&family=Fira+Code:wght@400;500;600&family=IBM+Plex+Mono:wght@400;500;600&family=Source+Code+Pro:wght@400;500;600&display=swap"
+		/>
 	</head>
 	<body>
 		<ClientTransitions client:load />
