--- a/src/pages/quote.astro
+++ b/src/pages/quote.astro
@@ -29,7 +29,6 @@ const randomQuote = getRandomQuote(quotes);
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600;700&family=Fira+Code:wght@400;500;600;700&family=IBM+Plex+Mono:wght@400;500;600;700&family=Source+Code+Pro:wght@400;500;600;700&family=Manrope:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=Roboto:wght@400;500;700&family=Lato:wght@400;700&display=swap"
 		/>
 	</head>
@@ -41,7 +40,8 @@ const randomQuote = getRandomQuote(quotes);
 
 				<!-- Main quote typer -->
 				<div id="quote-container">
-					<QuoteTyper 
+					<QuoteTyper
+						client:load
 						quote={randomQuote.text}
 						author={randomQuote.author}
 						onComplete={(summary) => {
